--- a/js-drum/index.html
+++ b/js-drum/index.html
@@ -1,11 +1,93 @@
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>JS Drum Kit</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="theme-color" content="#252525">
+  <title>JS Drum Kit</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <div class="wrapper">
+    <div class="banner">
+      <h2>Volume Up</h2>
+    </div>
 
-    <body>
-        
-    </body>
+    <div class="keys">
+      <div data-key="65" class="key">
+        <kbd>A</kbd>
+        <span class="sound">clap</span>
+      </div>
+      <div data-key="83" class="key">
+        <kbd>S</kbd>
+        <span class="sound">hihat</span>
+      </div>
+      <div data-key="68" class="key">
+        <kbd>D</kbd>
+        <span class="sound">kick</span>
+      </div>
+      <div data-key="70" class="key">
+        <kbd>F</kbd>
+        <span class="sound">openhat</span>
+      </div>
+      <div data-key="71" class="key">
+        <kbd>G</kbd>
+        <span class="sound">boom</span>
+      </div>
+      <div data-key="72" class="key">
+        <kbd>H</kbd>
+        <span class="sound">ride</span>
+      </div>
+      <div data-key="74" class="key">
+        <kbd>J</kbd>
+        <span class="sound">snare</span>
+      </div>
+      <div data-key="75" class="key">
+        <kbd>K</kbd>
+        <span class="sound">tom</span>
+      </div>
+      <div data-key="76" class="key">
+        <kbd>L</kbd>
+        <span class="sound">tink</span>
+      </div>
+    </div>
+  </div>
+
+  <audio data-key="65" src="sounds/clap.wav"></audio>
+  <audio data-key="83" src="sounds/hihat.wav"></audio>
+  <audio data-key="68" src="sounds/kick.wav"></audio>
+  <audio data-key="70" src="sounds/openhat.wav"></audio>
+  <audio data-key="71" src="sounds/boom.wav"></audio>
+  <audio data-key="72" src="sounds/ride.wav"></audio>
+  <audio data-key="74" src="sounds/snare.wav"></audio>
+  <audio data-key="75" src="sounds/tom.wav"></audio>
+  <audio data-key="76" src="sounds/tink.wav"></audio>
+
+<script>
+function playSound(e){
+  // `` is called backtick. It is used for templating a string. In the line below, audio is going to be a variable
+  // which will hold different values so we created a teplaye in the placeholder ${} for various input keys.
+  // stores the audio element associated with the keyCode
+  const audio = document.querySelector(`audio[data-key = "${e.keyCode}"]`);
+  // stores the element with class .key associated with the keyCode
+  const key = document.querySelector(`.key[data-key = "${e.keyCode}"]`);
+  if(!audio) return; //stops the function
+  //rewinds to the start and play again even if the func is called again while it is already being played.
+  audio.currentTime = 0; 
+  audio.play();
+  //add a class to the element stored in the variable
+  key.classList.add('playing'); 
+}
+
+function removeTransition(e) {
+  if(e.propertyName !== 'transform') return;
+  this.classList.remove('playing');
+}
+
+const keys = document.querySelectorAll('.key');
+keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+window.addEventListener("keydown", playSound);
+</script>
+
+
+</body>
 </html>
