--- a/js-clock/index.html
+++ b/js-clock/index.html
@@ -5,6 +5,7 @@
   <meta name="theme-color" content="#028ded">
   <title>JS + CSS Clock</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favi.ico">
 </head>
 <body>
   <div class="clock">
