--- a/js-drum/index.html
+++ b/js-drum/index.html
@@ -5,6 +5,7 @@
   <meta name="theme-color" content="#252525">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/favi.png">
 </head>
 <body>
   <div class="wrapper">
