update vanilla-js homepage

--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col s10 offset-s1 m6 l6">
+                        <div class="card">
+                            <div class="card-image">
+                                <img src="img/3.png">
+                                <span class="card-title">Update CSS variables with JS</span>
+                                <a class="btn-floating halfway-fab waves-effect waves-light red" href="https://ayushexploring.github.io/vanilla-js/css-js-var/" target="_blank">
+                                    <i class="material-icons">call_made</i>
+                                </a>
+                            </div>
+                            <div class="card-content">
+                                <p>Updating CSS variables using JavaScript.</p>
+                            </div>
+                        </div>
+                    </div>
                     <!-- <div class="col s10 offset-s1 m6 l6">
                         <div class="card">
                             <div class="card-image">
